chore: clean up project wisdom history and update UI components

--- a/icons.html
+++ b/icons.html
@@ -1,4 +1,4 @@
-<!-- SVG Icon Sprite - Inline icons for Knowledge Clipper -->
+<!-- SVG Icon Sprite - Inline icons for Klue -->
 <!-- Inspired by Linear.app's clean, minimal aesthetic -->
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
 
