Fix chat input context leak and [object PointerEvent] bug

--- a/dev/tests/test-runner.html
+++ b/dev/tests/test-runner.html
@@ -83,6 +83,7 @@
         import('./modules.test.js?t=' + Date.now());
         import('./state.test.js?t=' + Date.now());
         import('./ui.test.js?t=' + Date.now());
+        import('./bug-fixes.test.js?t=' + Date.now());
 
         // Summary
         window.addEventListener('load', () => {
